methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs:4: error: type mismatch;
 found   : Unit
 required: Int
    for (i<-1 to nbPas) {
          ^MethodsArgs:8: error: type mismatch;
 found   : Unit
 required: Int
     for (j<-1 to nbPas) {
           ^